feat: update user register document.
